# docker/swagger/v1/doc.yaml
@@ -158,72 +158,6 @@ paths:
                     type: string
                     description: The message error
                     example: NoIdException
-  /conversations/SwitchContext:
-    post:
-      tags:
-        - Conversations
-      summary: Switch a context of conversation
-      operationId: switchcontextConversation
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                ConversationId:
-                  type: string
-                  description: The ID of the conversation where I want to switch the context.
-                  example: con_66b49782713ab
-                ContextId:
-                  type: string
-                  description: The new context ID
-                  example: id_modified
-                
-
-      responses:
-        '200':
-          description: Successful response
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                    description: Indicate whether the context was changed
-                    example: true
-                  data:
-                    type: object
-                    properties:
-                      contextId:
-                        type: string
-                        description: The Id of new Context
-                        example: con_664c50f9c95cb
-                      conversation:
-                        type: string
-                        description: The Id of the conversation
-                        example: con_664c50f9c95cb
-                    description: Data returned by the conversation service
-                  message:
-                    type: string
-                    description: Message associated with the response
-                    example: "How can I help you today ?"
-        '500':
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                    description: Indicates whether the conversation was created
-                    example: false
-                  error:
-                    type: string
-                    description: The message error
-                    example: NoIdException
   /context/Make:
     post:
       tags:
@@ -278,29 +212,27 @@ paths:
                     type: string
                     description: The message error
                     example: EmptyString
-  /context/View:
-    post:
+  /contexts:
+    get:
       tags:
           - Context
       summary: View a context
       operationId: viewContext
-      requestBody:
+      parameters:
+      - name: Id
+        in: query
         required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                Id:
-                  type: string
-                  description: The context you want to view, if you provide the context of a conversation, they will find the relevant context.
-                  example: cot_66b46fefe29d5
-                IdType:
-                  type: string
-                  description: Determine whether the given ID is a context ID or a conversation ID.
-                  example: context
-                
-
+        schema:
+          type: string
+          example: cot_66b46fefe29d5
+        description: The context you want to view. If you provide a conversation ID, it will retrieve the relevant context.
+      - name: IdType
+        in: query
+        required: true
+        schema:
+          type: string
+          example: context
+        description: Specify whether the given ID is a context ID or a conversation ID.
       responses:
         '200':
           description: Successful response
@@ -337,8 +269,7 @@ paths:
                     type: string
                     description: The message error
                     example: NoIdException     
-  /contexts:
-    put:
+    patch:
       tags:
           - Context
       summary: Modify a context message
@@ -399,8 +330,7 @@ paths:
                     type: string
                     description: The message error
                     example: NoIdException
-  /context/Delete:
-    post:
+    delete:
       tags:
           - Context
       summary: Delete a context
@@ -437,7 +367,7 @@ paths:
                       message:
                         type: string
                         description: Message explaining whether the context has been removed or not.
-                        example: the context was deleed
+                        example: the context was deleted
                     
         '500':
           description: Internal Server Error
